--- a/config/eventing-istio.yaml
+++ b/config/eventing-istio.yaml
@@ -4,22 +4,27 @@ config:
       openShiftVersions:
       - version: "4.14"
       - version: "4.12"
+        onDemand: true
     release-v1.10:
       openShiftVersions:
       - version: "4.14"
       - version: "4.11"
+        onDemand: true
     release-v1.11:
       openShiftVersions:
       - version: "4.14"
       - version: "4.12"
+        onDemand: true
     release-v1.12:
       openShiftVersions:
       - version: "4.14"
       - version: "4.12"
+        onDemand: true
     release-v1.13:
       openShiftVersions:
       - version: "4.14"
       - version: "4.12"
+        onDemand: true
 repositories:
 - dockerfiles: {}
   e2e:
