--- a/config/serving-net-istio.yaml
+++ b/config/serving-net-istio.yaml
@@ -4,18 +4,22 @@ config:
       openShiftVersions:
       - version: "4.14"
       - version: "4.11"
+        onDemand: true
     release-v1.11:
       openShiftVersions:
       - version: "4.14"
       - version: "4.12"
+        onDemand: true
     release-v1.12:
       openShiftVersions:
       - version: "4.14"
       - version: "4.12"
+        onDemand: true
     release-v1.13:
       openShiftVersions:
       - version: "4.14"
       - version: "4.12"
+        onDemand: true
 repositories:
 - dockerfiles: {}
   ignoreConfigs: {}
