Run s-o periodic tests on Mon,Fri
Running them twice a week, similar to other midstream repos but on
different days to prevent resource exhaustion in cloud.

--- a/config/serverless-operator.yaml
+++ b/config/serverless-operator.yaml
@@ -2,11 +2,9 @@ config:
   branches:
     main:
       openShiftVersions:
-      - cron: 0 3 * * *
-        generateCustomConfigs: true
+      - generateCustomConfigs: true
         version: "4.15"
-      - cron: 0 5 * * *
-        onDemand: true
+      - onDemand: true
         version: "4.12"
 repositories:
 - customConfigs:
