Update serving CI config

--- a/config/serving.yaml
+++ b/config/serving.yaml
@@ -26,11 +26,8 @@ config:
       - version: "4.15"
       - onDemand: true
         version: "4.12"
-    release-v1.13:
-      openShiftVersions:
-      - version: "4.15"
-      - onDemand: true
-        version: "4.12"
+      skipE2EMatches:
+        - .*e2e-tls
 repositories:
 - dockerfiles:
     matches:
