--- a/config/serverless-operator.yaml
+++ b/config/serverless-operator.yaml
@@ -326,6 +326,7 @@ repositories:
     - .*main.yaml$
     - .*lp-interop.*
     - .*lp-interop.*
+    - .*lp-rosa-classic.*
   imageNameOverrides:
     serverless-operator: bundle
   imagePrefix: serverless
