--- a/.github/workflows/multiarch-containerfile-build.yaml
+++ b/.github/workflows/multiarch-containerfile-build.yaml
@@ -12,7 +12,7 @@ on:
         required: true
         type: string
       platforms:
-        default: linux/amd64, linux/ppc64le, linux/s390x
+        default: linux/amd64, linux/armd64, linux/ppc64le, linux/s390x
         description: A list of platforms to build the images for
         required: false
         type: string
