--- a/.github/workflows/release-generate-ci-template.yaml
+++ b/.github/workflows/release-generate-ci-template.yaml
@@ -65,7 +65,7 @@ jobs:
         run: make generate-ci-no-clean ARGS=--branch=master
 
       - name: Create Pull Request
-        if: (github.event_name == 'push' || github.event_name == 'workflow_dispatch') && github.ref_name == 'main'
+        if: ${{ (github.event_name == 'push' || github.event_name == 'workflow_dispatch') && github.ref_name == 'main' }}
         uses: peter-evans/create-pull-request@v5
         with:
           token: ${{ secrets.SERVERLESS_QE_ROBOT }}
