--- a/.github/workflows/release-generate-ci.yaml
+++ b/.github/workflows/release-generate-ci.yaml
@@ -54,7 +54,7 @@ jobs:
         # Use master, see https://github.com/peter-evans/create-pull-request/issues/2108
         run: make generate-ci-no-clean ARGS=--branch=master
       - name: Create Pull Request
-        if: ${{ (github.event_name == 'push' || github.event_name == 'workflow_dispatch' ||  github.event_name == 'schedule') && github.ref_name == 'main' }}
+        if: ${{ (github.event_name == 'push' || github.event_name == 'workflow_dispatch' || github.event_name == 'schedule') && github.ref_name == 'main' }}
         uses: peter-evans/create-pull-request@v5
         with:
           token: ${{ secrets.SERVERLESS_QE_ROBOT }}
@@ -67,16 +67,9 @@ jobs:
           delete-branch: true
           body: |
             Sync Serverless CI using openshift-knative/hack.
-      - if: ${{ (github.event_name == 'push' || github.event_name == 'workflow_dispatch' || github.event_name == 'schedule') && github.ref_name == 'main' }}
+      - env:
+          GH_TOKEN: ${{ secrets.SERVERLESS_QE_ROBOT }}
+        if: ${{ (github.event_name == 'push' || github.event_name == 'workflow_dispatch' || github.event_name == 'schedule') && github.ref_name == 'main' }}
         name: '[eventing - release-next] Create Konflux PR'
-        uses: peter-evans/create-pull-request@v5
-        with:
-          base: main
-          body: '[main] Sync Konflux configurations'
-          branch: sync-konflux/release-next
-          commit-message: '[main] Sync Konflux configurations'
-          delete-branch: true
-          path: ./src/github.com/openshift-knative/hack/openshift-knative/eventing
-          push-to-fork: serverless-qe/eventing
-          title: '[main] Sync Konflux configurations'
-          token: ${{ secrets.SERVERLESS_QE_ROBOT }}
+        run: gh auth setup-git && git remote add fork https://github.com/serverless-qe/eventing.git && git push fork sync-konflux/release-next:sync-konflux/release-next && gh pr create --base main --head serverless-qe:sync-konflux/release-next --fill-verbose
+        working-directory: ./src/github.com/openshift-knative/hack/openshift-knative/eventing
