--- a/.github/workflows/release-generate-ci.yaml
+++ b/.github/workflows/release-generate-ci.yaml
@@ -55,21 +55,11 @@ jobs:
         run: make generate-ci-no-clean ARGS=--branch=master
       - name: Create Pull Request
         if: ${{ (github.event_name == 'push' || github.event_name == 'workflow_dispatch' || github.event_name == 'schedule') && github.ref_name == 'main' }}
-        uses: peter-evans/create-pull-request@v5
-        with:
-          token: ${{ secrets.SERVERLESS_QE_ROBOT }}
-          path: ./src/github.com/openshift-knative/hack/openshift/release
-          base: master
-          branch: sync-serverless-ci
-          title: "Sync Serverless CI"
-          commit-message: "Sync Serverless CI"
-          push-to-fork: serverless-qe/release
-          delete-branch: true
-          body: |
-            Sync Serverless CI using openshift-knative/hack.
+        run: gh auth setup-git && git remote add fork https://github.com/serverless-qe/release.git && git push fork sync-serverless-ci:sync-serverless-ci -f && gh pr create --base master --head serverless-qe:sync-serverless-ci --fill-verbose
+        working-directory: ./src/github.com/openshift-knative/hack/openshift/release
       - env:
           GH_TOKEN: ${{ secrets.SERVERLESS_QE_ROBOT }}
         if: ${{ (github.event_name == 'push' || github.event_name == 'workflow_dispatch' || github.event_name == 'schedule') && github.ref_name == 'main' }}
         name: '[eventing - release-next] Create Konflux PR'
-        run: gh auth setup-git && git remote add fork https://github.com/serverless-qe/eventing.git && git push fork sync-konflux/release-next:sync-konflux/release-next && gh pr create --base main --head serverless-qe:sync-konflux/release-next --fill-verbose
+        run: gh auth setup-git && git remote add fork https://github.com/serverless-qe/eventing.git && git push fork sync-konflux/release-next:sync-konflux/release-next -f && gh pr create --base main --head serverless-qe:sync-konflux/release-next --fill-verbose
         working-directory: ./src/github.com/openshift-knative/hack/openshift-knative/eventing
