Remove FORCE_KONFLUX_INDEX flag

--- a/config/serverless-operator.yaml
+++ b/config/serverless-operator.yaml
@@ -16,22 +16,19 @@ config:
           pullSpec: registry.access.redhat.com/ubi8/openjdk-21-runtime
       openShiftVersions:
       - candidateRelease: true
-        cronForceKonfluxIndex: true
         customConfigs:
           enabled: true
           includes:
           - .*ocp4.18-lp-interop.*
         onDemand: true
         version: "4.18"
-      - cronForceKonfluxIndex: true
-        customConfigs:
+      - customConfigs:
           enabled: true
           excludes:
           - .*ocp4.18-lp-interop.*
         useClusterPool: true
         version: "4.17"
-      - cronForceKonfluxIndex: true
-        onDemand: true
+      - onDemand: true
         version: "4.13"
     release-1.35:
       konflux:
@@ -92,7 +89,7 @@ repositories:
           cluster_profile: aws
           test:
           - as: operator-e2e
-            commands: FORCE_KONFLUX_INDEX=true GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
+            commands: GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
               make test-e2e-with-kafka
             from: serverless-source-image
             resources:
@@ -102,7 +99,7 @@ repositories:
                 cpu: 100m
                 memory: 200Mi
           - as: knative-serving-eventing-e2e
-            commands: FORCE_KONFLUX_INDEX=true GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
+            commands: GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
               make test-upstream-e2e-no-upgrade
             from: serverless-source-image
             resources:
@@ -112,7 +109,7 @@ repositories:
                 cpu: 100m
                 memory: 200Mi
           - as: knative-eventing-kafka-broker-e2e
-            commands: FORCE_KONFLUX_INDEX=true GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
+            commands: GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
               make test-upstream-e2e-kafka-no-upgrade
             from: serverless-source-image
             resources:
@@ -136,7 +133,7 @@ repositories:
           cluster_profile: azure4
           test:
           - as: operator-e2e
-            commands: FORCE_KONFLUX_INDEX=true GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
+            commands: GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
               make test-e2e-with-kafka
             from: serverless-source-image
             resources:
@@ -146,7 +143,7 @@ repositories:
                 cpu: 100m
                 memory: 200Mi
           - as: knative-serving-eventing-e2e
-            commands: FORCE_KONFLUX_INDEX=true GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
+            commands: GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
               make test-upstream-e2e-no-upgrade
             from: serverless-source-image
             resources:
@@ -156,7 +153,7 @@ repositories:
                 cpu: 100m
                 memory: 200Mi
           - as: knative-eventing-kafka-broker-e2e
-            commands: FORCE_KONFLUX_INDEX=true GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
+            commands: GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
               make test-upstream-e2e-kafka-no-upgrade
             from: serverless-source-image
             resources:
@@ -180,7 +177,7 @@ repositories:
           cluster_profile: gcp
           test:
           - as: operator-e2e
-            commands: FORCE_KONFLUX_INDEX=true GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
+            commands: GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
               make test-e2e-with-kafka
             from: serverless-source-image
             resources:
@@ -190,7 +187,7 @@ repositories:
                 cpu: 100m
                 memory: 200Mi
           - as: knative-serving-eventing-e2e
-            commands: FORCE_KONFLUX_INDEX=true GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
+            commands: GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
               make test-upstream-e2e-no-upgrade
             from: serverless-source-image
             resources:
@@ -200,7 +197,7 @@ repositories:
                 cpu: 100m
                 memory: 200Mi
           - as: knative-eventing-kafka-broker-e2e
-            commands: FORCE_KONFLUX_INDEX=true GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
+            commands: GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
               make test-upstream-e2e-kafka-no-upgrade
             from: serverless-source-image
             resources:
@@ -243,7 +240,7 @@ repositories:
             HYPERSHIFT_NODE_COUNT: "6"
           test:
           - as: operator-e2e
-            commands: FORCE_KONFLUX_INDEX=true GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
+            commands: GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
               USER_MANAGEMENT_ALLOWED=false make test-e2e-with-kafka
             from: serverless-source-image
             resources:
@@ -253,7 +250,7 @@ repositories:
                 cpu: 100m
                 memory: 200Mi
           - as: knative-serving-eventing-e2e
-            commands: FORCE_KONFLUX_INDEX=true GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
+            commands: GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
               make test-upstream-e2e-no-upgrade
             from: serverless-source-image
             resources:
@@ -263,7 +260,7 @@ repositories:
                 cpu: 100m
                 memory: 200Mi
           - as: knative-eventing-kafka-broker-e2e
-            commands: FORCE_KONFLUX_INDEX=true GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
+            commands: GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
               make test-upstream-e2e-kafka-no-upgrade
             from: serverless-source-image
             resources:
@@ -302,7 +299,7 @@ repositories:
           - ref: osd-create-create
           test:
           - as: operator-e2e
-            commands: FORCE_KONFLUX_INDEX=true GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
+            commands: GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
               make test-e2e-with-kafka
             from: serverless-source-image
             resources:
@@ -312,7 +309,7 @@ repositories:
                 cpu: 100m
                 memory: 200Mi
           - as: knative-serving-eventing-e2e
-            commands: FORCE_KONFLUX_INDEX=true GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
+            commands: GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
               make test-upstream-e2e-no-upgrade
             from: serverless-source-image
             resources:
@@ -335,7 +332,7 @@ repositories:
           cluster_profile: gcp
           test:
           - as: operator-e2e
-            commands: FORCE_KONFLUX_INDEX=true HA=false GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
+            commands: HA=false GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
               make test-e2e-with-kafka-no-tracing
             from: serverless-source-image
             resources:
@@ -364,7 +361,7 @@ repositories:
           cluster_profile: vsphere-elastic
           test:
           - as: operator-e2e
-            commands: FORCE_KONFLUX_INDEX=true HA=false GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
+            commands: HA=false GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
               make test-e2e-with-kafka
             from: serverless-source-image
             resources:
@@ -426,7 +423,7 @@ repositories:
           test:
           - ref: cucushift-installer-check-cluster-health
           - as: knative-eventing-kafka-broker-e2e
-            commands: FORCE_KONFLUX_INDEX=true GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
+            commands: GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
               SKIP_MESH_AUTH_POLICY_GENERATION=true make test-upstream-e2e-kafka-no-upgrade
             from: serverless-source-image
             resources:
@@ -434,7 +431,7 @@ repositories:
                 cpu: 100m
                 memory: 200Mi
           - as: operator-e2e
-            commands: FORCE_KONFLUX_INDEX=true GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
+            commands: GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
               SKIP_MESH_AUTH_POLICY_GENERATION=true DELETE_CRD_ON_TEARDOWN=false make
               teardown test-e2e-with-kafka
             from: serverless-source-image
@@ -443,7 +440,7 @@ repositories:
                 cpu: 100m
                 memory: 200Mi
           - as: knative-serving-eventing-e2e
-            commands: FORCE_KONFLUX_INDEX=true GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
+            commands: GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
               SKIP_MESH_AUTH_POLICY_GENERATION=true make test-upstream-e2e-no-upgrade
             from: serverless-source-image
             resources:
@@ -484,7 +481,7 @@ repositories:
               scenario serverless
           test:
           - as: operator-e2e
-            commands: FORCE_KONFLUX_INDEX=true GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
+            commands: GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
               SKIP_MESH_AUTH_POLICY_GENERATION=true make test-e2e-with-kafka
             from: serverless-source-image
             resources:
@@ -494,7 +491,7 @@ repositories:
                 cpu: 100m
                 memory: 200Mi
           - as: knative-serving-eventing-e2e
-            commands: FORCE_KONFLUX_INDEX=true GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
+            commands: GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
               SKIP_MESH_AUTH_POLICY_GENERATION=true make test-upstream-e2e-no-upgrade
             from: serverless-source-image
             resources:
@@ -504,7 +501,7 @@ repositories:
                 cpu: 100m
                 memory: 200Mi
           - as: knative-eventing-kafka-broker-e2e
-            commands: FORCE_KONFLUX_INDEX=true GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
+            commands: GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
               SKIP_MESH_AUTH_POLICY_GENERATION=true make test-upstream-e2e-kafka-no-upgrade
             from: serverless-source-image
             resources:
@@ -540,7 +537,7 @@ repositories:
               scenario serverless
           test:
           - as: operator-e2e
-            commands: FORCE_KONFLUX_INDEX=true GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
+            commands: GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
               SKIP_MESH_AUTH_POLICY_GENERATION=true make test-e2e-with-kafka
             from: serverless-source-image
             resources:
@@ -550,7 +547,7 @@ repositories:
                 cpu: 100m
                 memory: 200Mi
           - as: knative-serving-eventing-e2e
-            commands: FORCE_KONFLUX_INDEX=true GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
+            commands: GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
               SKIP_MESH_AUTH_POLICY_GENERATION=true make test-upstream-e2e-no-upgrade
             from: serverless-source-image
             resources:
@@ -560,7 +557,7 @@ repositories:
                 cpu: 100m
                 memory: 200Mi
           - as: knative-eventing-kafka-broker-e2e
-            commands: FORCE_KONFLUX_INDEX=true GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
+            commands: GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin
               SKIP_MESH_AUTH_POLICY_GENERATION=true make test-upstream-e2e-kafka-no-upgrade
             from: serverless-source-image
             resources:
